// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookRow initialization code paths \`display is a truthy prop\` should render properly 1`] = `
<div
  className="list-books"
>
  <div
    className="list-books-title"
  >
    <h1 />
  </div>
  <div
    className="list-books-content"
  >
    <div
      className="bookshelf"
    >
      <h2
        className="bookshelf-title"
      >
        Currently Reading
      </h2>
      <div
        className="bookshelf-books"
      >
        <ol
          className="books-grid"
        >
          <li
            key="123"
          >
            <Book
              book={
                Object {
                  "id": "123",
                  "title": "fake title",
                }
              }
              changeBookshelf={[MockFunction]}
              displaySearch={true}
            />
          </li>
          <li
            key="456"
          >
            <Book
              book={
                Object {
                  "id": "456",
                  "title": "fake title 2",
                }
              }
              changeBookshelf={[MockFunction]}
              displaySearch={true}
            />
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookRow initialization code paths \`myReads\` is a prop should render properly 1`] = `
<div
  className="list-books"
>
  <div
    className="list-books-title"
  >
    <h1>
      MyReads
    </h1>
  </div>
  <div
    className="list-books-content"
  >
    <div
      className="bookshelf"
    >
      <h2
        className="bookshelf-title"
      >
        Currently Reading
      </h2>
      <div
        className="bookshelf-books"
      >
        <ol
          className="books-grid"
        >
          <li
            key="123"
          >
            <Book
              book={
                Object {
                  "id": "123",
                  "title": "fake title",
                }
              }
              changeBookshelf={[MockFunction]}
            />
          </li>
          <li
            key="456"
          >
            <Book
              book={
                Object {
                  "id": "456",
                  "title": "fake title 2",
                }
              }
              changeBookshelf={[MockFunction]}
            />
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookRow initialization code paths no optional props should render properly 1`] = `
<div
  className="list-books"
>
  <div
    className="list-books-title"
  >
    <h1 />
  </div>
  <div
    className="list-books-content"
  >
    <div
      className="bookshelf"
    >
      <h2
        className="bookshelf-title"
      >
        Currently Reading
      </h2>
      <div
        className="bookshelf-books"
      >
        <ol
          className="books-grid"
        >
          <li
            key="123"
          >
            <Book
              book={
                Object {
                  "id": "123",
                  "title": "fake title",
                }
              }
              changeBookshelf={[MockFunction]}
            />
          </li>
          <li
            key="456"
          >
            <Book
              book={
                Object {
                  "id": "456",
                  "title": "fake title 2",
                }
              }
              changeBookshelf={[MockFunction]}
            />
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;
